# drift-compass

./: .gitignore  README.md  pyproject.toml
.github/workflows/: analyze.yml  collect.yml
src/drift/: __init__.py  analyzer.py  cli.py  detector.py  monitor.py  normalizer.py
tests/: test_drift.py
