[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "drift-compass"
version = "0.4.1"
description = "Log drift detection and timezone normalization toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: System :: Logging",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.1", "pytest-cov", "ruff"]

[project.scripts]
drift = "drift.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
